src/components/hero/TopHero.css
.parent{

    display: flex;
    border: 1px solid red ;
    height: 100vh;
    align-items: center;
    justify-content: center;
}
.hero-img{
    max-width: 660px;
    height: auto;
}
.content-left{
    width: 30%;
}

h1{

    font-size: 52px;
    color: #ce4b13;
    text-transform: uppercase;
    background: radial-gradient(circle, rgb(94, 12, 217) 0%, rgba(252,70,107,1) 100%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    display: inline;
}
h2{
    font-size:25px;
    color: #FCA70C;
    font-weight: 400;
    text-transform: uppercase;
    letter-spacing: 8px;
    font-family: cursive;
}

